Revert AdvancedSearch TagInput so use TagSelector instead of custom component (it had some issues I couldn't solve) Also fixed some overflow issues with popovers in a Dialog

--- a/widgets/popovers/popover.scss
+++ b/widgets/popovers/popover.scss
@@ -11,6 +11,8 @@ dialog {
   min-width: min(50ch, 80vw);
   max-height: 80vh;
 
+  overflow: visible; // allows fly-outs to be visible outside of this dialog
+
   &[open] {
     @keyframes appear {
       from {
